@@ -117,6 +117,12 @@ void addNMatrixInt() {
         .def("multRow", &NMatrixInt::multRow)
         .def("multCol", &NMatrixInt::multCol)
         .def("det", &NMatrixInt::det)
+        .def("divRowExact", &NMatrixInt::divRowExact)
+        .def("divColExact", &NMatrixInt::divColExact)
+        .def("gcdRow", &NMatrixInt::gcdRow)
+        .def("gcdCol", &NMatrixInt::gcdCol)
+        .def("reduceRow", &NMatrixInt::reduceRow)
+        .def("reduceCol", &NMatrixInt::reduceCol)
         .def(self == self)
         .def(self != self)
         .def("__mul__", multiply)
